rewrite the queryExecution logic in netty